source/blender/editors/space_image/image_buttons.c
@@ -980,6 +980,16 @@ void uiTemplateImage(uiLayout *layout,
           bool is_data = IMB_colormanagement_space_name_is_data(ima->colorspace_settings.name);
           uiLayoutSetActive(sub, !is_data);
         }
+
+        if (ima && iuser) {
+          void *lock;
+          ImBuf *ibuf = BKE_image_acquire_ibuf(ima, iuser, &lock);
+
+          if (ibuf->rect_float && (ibuf->flags & IB_halffloat) == 0) {
+            uiItemR(col, &imaptr, "use_half_precision", 0, NULL, ICON_NONE);
+          }
+          BKE_image_release_ibuf(ima, ibuf, lock);
+        }
       }
 
       uiItemR(col, &imaptr, "use_view_as_render", 0, NULL, ICON_NONE);
