source/blender/makesdna/DNA_image_types.h
@@ -192,7 +192,7 @@ typedef struct Image {
 
 /* Image.flag */
 enum {
-  IMA_FLAG_UNUSED_0 = (1 << 0), /* cleared */
+  IMA_HIGH_BITDEPTH = (1 << 0),
   IMA_FLAG_UNUSED_1 = (1 << 1), /* cleared */
 #ifdef DNA_DEPRECATED_ALLOW
   IMA_DO_PREMUL = (1 << 2),
